# meteora-ui-wrapper

./: .env.example  .gitignore  AL_ENHANCEMENTS_VERIFIED.md  CLAUDE.md  DATA_SOURCES.md  IMPLEMENTATION_SUMMARY.md  MERGE_COMPLETE.md  METEORA_INTEGRATION_COMPLETE.md  PERFORMANCE_FIX_SUMMARY.md  README.md  STATUS.md  TESTING_GUIDE_FINAL.md  TMUX-COMMANDS.md  docker-compose.yml  merge-al-fix.sh  merge-al.sh  next.config.ts  package-lock.json  package.json  playwright.config.ts  test-jupiter-api-all.js  test-jupiter-api.js  tsconfig.json
backend/: Dockerfile  RAILWAY_SETUP.md  README.md  devnet-test-pools.json  devnet-test-tokens.json  package-lock.json  package.json
contracts/: README.md
contracts/metatools-vault/: COMPILATION_STATUS.md  Cargo.toml  FINAL_CHECKLIST.md  FINAL_STATUS.md  README.md  START_HERE.md
contracts/metatools-vault/api/: Cargo.toml
contracts/metatools-vault/api/src/: error.rs  event.rs  instruction.rs  lib.rs  sdk.rs
contracts/metatools-vault/api/src/state/: global_config.rs  mod.rs  position.rs  vault_metadata.rs
contracts/metatools-vault/program/: Cargo.toml
contracts/metatools-vault/program/src/: close_position.rs  create_vault.rs  initialize_config.rs  lib.rs  open_position.rs  update_config.rs  update_position_tvl.rs
contracts/metatools-vault/program/tests/: test.rs
contracts/metatools-vault/scripts/: deploy-devnet.sh  deploy-mainnet.sh
docs/: DEVNET_AUTO_INDEXING.md  DLMM_SDK_REFERENCE.md  E2E_ADD_LIQUIDITY_TEST.md  FIXES_SUMMARY.md  FIX_LIQUIDITY_SEEDING_ISSUES.md  FIX_SINGLE_SIDED_RANGE_VALIDATION.md  METEORA_PROTOCOLS.md  (+3 more)
(+377 files in other folders)
